# propad

./: README.md  export_dialog.py  file_manager.py  flatpak-pip-generator  formatting_toolbar.py  io.github.sanjai.ProPad.metainfo.xml  io.github.sanjai.ProPad.yaml  justfile  main.py  meson.build  pyproject.toml  python-deps-sources.yaml  sample.py  search_replace.py  sidebar.py  state_manager.py  webview.py  window.py
assets/: mathjax-config.js  mathjax-render.js  mermaid-loader.js  styles.css
lib/: export_dialog.blp  file_manager.blp  formatting_toolbar.blp  search_replace.blp  sidebar.blp  webview.blp  window.blp
po/: ar.po  de.po
propad/: __init__.py  config.py  export_dialog.py  file_manager.py  formatting_toolbar.py  i18n.py  search_replace.py  settings.py  shortcuts_window.py  sidebar.py  state_manager.py  webview.py  window.py
propad/assets/: mathjax-config.js  styles.css
propad/ui/: table_selector.css
repo/: summary  summary.idx
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 061d7640dc75db4d5c49c3ac08308b3e57e5e0e77a9dde13e98b1f0aa8bb3bbf-55e1782882201469b54709a3ef7e0b0a5e27bad6b7141c2ef7f6b929cda897d3.delta  120bb3365afc4b63f39d853bf7fc6bac312b4c8b107a52438a634dad7ae73b4f-0ec14a0c813fac40b1e77cb7e4c21fb09758ec180ab066989b8d7cb4022b32dd.delta  1dbfed6557566ae912022d53ea6945644cacd16daedebf6307255357d19fbd0f-a42ed8c5b4655df7de8f9215527163d4f09c7ed8c3cd0215e45e8d36c62e46ac.delta  283984e17fd9b19228613205c4ea7f3b36d91f1113679b87099a258ed58dd593-0ec14a0c813fac40b1e77cb7e4c21fb09758ec180ab066989b8d7cb4022b32dd.delta  33f3531a61bca57470c38c6a18bc98f7de1f6b6e76dee3cf1aebb7fd5e8e1fbc-d6f29eba4cea22bf79a6af40fe31e6f0dc846afdddd33ce7f833f99c729ec311.delta  4e0e507fe0b62df2e3a33dcb5b6a5144a76d0a4a9c1af4ee7dba74b0983a899c-a42ed8c5b4655df7de8f9215527163d4f09c7ed8c3cd0215e45e8d36c62e46ac.delta  519784065160235964a7e9f2b9b563fa70ab02afde3e9e81387f6fa92f7db871-0ec14a0c813fac40b1e77cb7e4c21fb09758ec180ab066989b8d7cb4022b32dd.delta  52d1bcc9fb44c5472dc1a42c77c58ee1ea95a8bee3a4fb0e470231d09d4aae9c-55e1782882201469b54709a3ef7e0b0a5e27bad6b7141c2ef7f6b929cda897d3.delta  6283686a54a59381c3c4fd02a6d46f4b8e9b65075dbe99adf15875734bab24bb-0f58ce30eb75c016eda61b837b5dc3a89d0da0220f546b4fe03f8879ed171810.delta  8e4ebbc066b210efe7924356a37bd34e46501f977b572c11f3ae9776bb2154e5-55e1782882201469b54709a3ef7e0b0a5e27bad6b7141c2ef7f6b929cda897d3.delta  (+3 more)
scripts/: propad-launcher.sh  update_manifest.py
src/: export_dialog.py  file_manager.py  formatting_toolbar.py  sidebar.py  state_manager.py  webview.py  window.py
ui/: export_dialog.ui  file_manager.ui  formatting_toolbar.ui  search_replace.ui  shortcuts_window.ui  sidebar.ui  webview.ui  window.ui
(+3 files in other folders)
